[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://sprites/Tiles/platformPack_tile004.png" type="Texture" id=4]
[ext_resource path="res://scenes/CloudParticle.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/LuckiestGuy-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://sprites/Tiles/platformPack_tile040.png" type="Texture" id=7]

[sub_resource type="TileSet" id=2]
0/name = "platformPack_tile004.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFont" id=3]
size = 21
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 35
font_data = ExtResource( 6 )

[node name="Main" type="Node"]
script = ExtResource( 3 )
min_platform_speed = 100

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Bg" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 600 )

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/Bg"]
margin_right = 360.0
margin_bottom = 640.0
color = Color( 0.2, 0.6, 0.854902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clouds" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 0.2 )
motion_mirroring = Vector2( 360, 640 )

[node name="CloudParticle2" parent="ParallaxBackground/Clouds" instance=ExtResource( 5 )]
position = Vector2( -31.8091, 206.141 )

[node name="CloudParticle3" parent="ParallaxBackground/Clouds" instance=ExtResource( 5 )]
position = Vector2( 187, 37 )

[node name="CloudParticle4" parent="ParallaxBackground/Clouds" instance=ExtResource( 5 )]
position = Vector2( 332.699, 254.141 )

[node name="CloudParticle5" parent="ParallaxBackground/Clouds" instance=ExtResource( 5 )]
position = Vector2( 91.7926, 395.342 )

[node name="CloudParticle6" parent="ParallaxBackground/Clouds" instance=ExtResource( 5 )]
position = Vector2( 287.258, 502.13 )

[node name="Walls" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 600 )

[node name="SideWalls" type="TileMap" parent="ParallaxBackground/Walls"]
position = Vector2( 21, 0 )
tile_set = SubResource( 2 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 5, 0, 0, 131071, 0, 0, 65541, 0, 0, 196607, 0, 0, 131077, 0, 0, 262143, 0, 0, 196613, 0, 0, 327679, 0, 0, 262149, 0, 0, 393215, 0, 0, 327685, 0, 0, 458751, 0, 0, 393221, 0, 0, 524287, 0, 0, 458757, 0, 0, 589823, 0, 0, 524293, 0, 0, 655359, 0, 0, 589829, 0, 0, 720895, 0, 0, 655365, 0, 0 )

[node name="BaseFloor" parent="." instance=ExtResource( 2 )]
position = Vector2( 21, 0 )
tile_data = PoolIntArray( 655359, 1, 0, 589824, 1, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0 )

[node name="PlatformSpawner" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Restarter" type="Timer" parent="."]
pause_mode = 2
wait_time = 4.0
one_shot = true

[node name="Platforms" type="Node" parent="."]

[node name="SpawnerLayer" type="CanvasLayer" parent="."]

[node name="SpawnerPosition" type="Position2D" parent="SpawnerLayer"]
position = Vector2( 0, -600 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 187, 206.141 )
z_index = 1
collision/safe_margin = 0.01
GRAVITY = 800
JUMP_SPEED = 500

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = 0
limit_right = 360
limit_bottom = 640
limit_smoothed = true
smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprites" type="Node2D" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0.780392 )

[node name="Bg" type="Sprite" parent="CanvasLayer/Control/Sprites"]
position = Vector2( 53, 32.2377 )
texture = ExtResource( 7 )

[node name="Bg2" type="Sprite" parent="CanvasLayer/Control/Sprites"]
position = Vector2( 116.444, 32 )
texture = ExtResource( 7 )

[node name="Bg3" type="Sprite" parent="CanvasLayer/Control/Sprites"]
position = Vector2( 179.666, 32.4596 )
texture = ExtResource( 7 )

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Control"]
margin_left = 40.0
margin_top = 23.5969
margin_right = 105.0
margin_bottom = 45.5969
custom_fonts/font = SubResource( 3 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreValue" type="Label" parent="CanvasLayer/Control"]
margin_left = 111.181
margin_top = 18.7201
margin_right = 151.181
margin_bottom = 54.7201
custom_fonts/font = SubResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="PlatformSpawner" to="." method="_on_PlatformSpawner_timeout"]
[connection signal="timeout" from="Restarter" to="." method="_on_Restarter_timeout"]
[connection signal="collected" from="Player" to="." method="_on_Player_collected"]
[connection signal="died" from="Player" to="." method="_on_Player_died"]
